<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <include
        layout="@layout/activity_maps"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.7"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView"
            android:layout_width="43dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/time_TextView"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextTime"
            android:layout_width="133dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/defaultNumber"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/timeUnit_TextView"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="36dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/distance_TextView"
            android:textAlignment="viewEnd"
            android:textSize="18sp"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editTextDistance"
            android:layout_width="132dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:ems="10"
            android:hint="@string/defaultNumber"
            android:inputType="numberDecimal"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/distanceUnit_TextView"
            android:textAlignment="viewStart"
            android:textSize="18sp"
            android:textStyle="bold" />
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0.10"
        android:orientation="horizontal">

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:background="#00ACC1"
            android:onClick="onClick"
            android:text="@string/update_Button"
            android:textAllCaps="false"
            android:textColor="@android:color/background_light"
            android:textSize="18sp"
            android:textStyle="bold" />
    </RelativeLayout>

</LinearLayout>